fix: overflow y fixed

--- a/src/App.css
+++ b/src/App.css
@@ -63,4 +63,5 @@
   gap: 2rem;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
 }
